# kl_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: conda_env.yaml  nav_2d_env.rviz
config/conda/: conda_env.yaml
config/rviz/: arm.rviz  nav_2d.rviz  nav_2d_env.rviz  nav_2d_hallway_env.rviz  nav_2d_three_room_env.rviz  visualize_latent_predictions.rviz
config/scenes/: nav_2d_env.yaml  nav_2d_one_obstacle_env.yaml  nav_2d_three_room_env.yaml
config/scenes/arm/: pole_obstacle.yaml  pole_obstacle_dirac.yaml  pole_obstacle_gaussian.yaml  test.yaml
config/scenes/nav_2d/: hallway.yaml  hallway_dirac.yaml  hallway_gaussian.yaml  one_obstacle.yaml  three_room_dirac_left.yaml  three_room_gaussian_left.yaml  three_room_gmm_even-weight.yaml  three_room_gmm_even-weight_Iproj.yaml  three_room_gmm_even-weight_Mproj.yaml  three_room_gmm_even-weight_gmm-cem.yaml  three_room_gmm_left-higher-weight.yaml  three_room_gmm_right-higher-weight.yaml  three_room_uniform_left.yaml
launch/: arm_env.launch  nav_2d_env.launch  visualize_latent_predictions.launch
src/kl_planning/common/: config.py  data_helper.py  modalities.py
src/kl_planning/data_collection/: __init__.py  collect_babble.py  collect_blocks_world.py  data_recorder.py
src/kl_planning/datasets/: __init__.py  latent_planning_dataset.py
src/kl_planning/distributions/: __init__.py  dirac_delta.py  gmm.py
src/kl_planning/environments/: __init__.py  arm_env.py  env.py  latent_env.py  nav_2d_env.py
src/kl_planning/learners/: __init__.py  (+1 more)
srv/: SetPose.srv  VisualizeTrajectorySamples.srv
(+29 files in other folders)
