<?xml version="1.0"?>
<package>

  <name>kl_planning</name>
  <version>0.0.0</version>
  <description>The kl_planning package</description>
  <maintainer email="adam.conkey@gmail.com">Adam Conkey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
    
  <export> </export>
  
</package>
